added detect function

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 C. Carouge <c.carouge@unsw.edu.au>
 Paola Petrelli <paola.petrelli@utas.edu.au>
+Paola Petrelli <paolap@users.noreply.github.com>
+paolap@utas.edu.au <paolap@utas.edu.au>
