--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,5 @@
+C. Carouge <c.carouge@unsw.edu.au>
 Paola Petrelli <paola.petrelli@utas.edu.au>
+Paola Petrelli <paolap@users.noreply.github.com>
+Paola Petrelli <pxp581@vdi-n10.nci.org.au>
+paolap@utas.edu.au <paolap@utas.edu.au>
