added documents, merged with conda branch

--- a/docs/xmhw_demo.ipynb
+++ b/docs/xmhw_demo.ipynb
@@ -3280,7 +3280,8 @@
    "outputs": [],
    "source": [
     "# First we create a dictionary representing the settings we want to use\n",
-    "# then we apply that to all the dataset variables and we use the resulting dictionary when calling to_netcdf() \n",
+    "# then we apply that to all the dataset variables and we use the resultingi\n",
+    "# dictionary when calling to_netcdf() \n",
     "#\n",
     "comp = dict(zlib=True, complevel=5, shuffle=True, dtype='float32')\n",
     "encoding = {var: comp for var in mhw.data_vars}\n",
@@ -6125,7 +6126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first attempt throw out an exception this is because at the moment the code cannot handle yet incomplete years. This means that every year needs to have the same number of timesteps. <br>\n",
+    "The first attempt produced an exception this is because at the moment the code cannot handle yet incomplete years. This means that every year needs to have the same number of timesteps. <br>\n",
     "This timeseries starts in Sep 1981 and end in Jan 2021. So we have to select only the years in between.<br> \n",
     "We also have to remove all the 29 of Feb so every year has 365 days that can be equally split in 5 days intervals."
    ]
@@ -8467,7 +8468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also use the same option with monhtly, weekly data or any other interval which is not daily. This is the option to use also with a 360 days year calendar, as the standard behaviour would be to try to get force the timeseries in a 366 days year, which would cause an error. So even if 'tstep' is False, the code will try to work out the calendar and if this is a 360 days one it will impose tstep=True."
+    "You can also use the same option with monthly, weekly data or any other interval which is not daily. This is the option to use also with a 360 days year calendar, as the standard behaviour would be to try to get force the timeseries in a 366 days year, which would cause an error. So even if 'tstep' is False, the code will try to work out the calendar and if this is a 360 days one it will impose tstep=True."
    ]
   },
   {
