--- a/docs/xmhw_demo.ipynb
+++ b/docs/xmhw_demo.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "### Import functions from xmhw\n",
-    "Import *threhshold* to calculate the climatologies and *detect* to detect the mhw events."
+    "Import *threshold* to calculate the climatologies and *detect* to detect the mhw events."
    ]
   },
   {
