updated meta and demo

--- a/docs/xmhw_demo.ipynb
+++ b/docs/xmhw_demo.ipynb
@@ -6065,7 +6065,7 @@
    "outputs": [],
    "source": [
     "# Combine the results into one dataset\n",
-    "mhw = xr.combine_by_coords(results)"
+    "mhw = xr.merge(results)"
    ]
   },
   {
@@ -8481,21 +8481,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:analysis3-21.10]",
+   "display_name": "Python [conda env:analysis27-18.10]",
    "language": "python",
-   "name": "conda-env-analysis3-21.10-py"
+   "name": "conda-env-analysis27-18.10-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
