--- a/docs/xmhw_demo.ipynb
+++ b/docs/xmhw_demo.ipynb
@@ -3324,7 +3324,7 @@
     "````\n",
     " threshold(temp, tdim='time', climatologyPeriod=[None,None], pctile=90, windowHalfWidth=5,  \n",
     "           smoothPercentile=True, smoothPercentileWidth=31, maxPadLength=None, \n",
-    "           coldSpells=False, Ly=False, anynans=False, skipna=False, point=False):\n",
+    "           coldSpells=False, Ly=False, anynans=False, skipna=False):\n",
     "````\n",
     "\n",
     "Where *temp* is the temperature timeseries, this is the only input needed. Arguments names are the same as the original MarineHeatWave code, where possible:<br>\n",
@@ -3368,9 +3368,6 @@
     " * **skipna**: bool, optional \n",
     "        If True percentile and mean function will use skipna=True.\n",
     "        Using skipna option is much slower (default is False)<br>\n",
-    " * **point**: bool, optional\n",
-    "        Set True if timeseries is a point, i.e. it has only time dimension,\n",
-    "        it will skip grid parallelisation (default is False)\n",
     "\n",
     "More on missing values later."
    ]
@@ -3430,18 +3427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If working with a single-point timeseries, there is no need to check for land points or parallelise the workflow, hence from version 1.0 we introduced a new flag `point` to indicate that the timeseries has only a time dimension. Point by default is False."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clim = threshold(sst_single_point, point=True)\n",
-    "mhw = detect(sst_single_point, clim['thresh'], clim['seas'], point=True)\n",
-    "block = block_average(mhw, point=True)"
+    "If working with a single-point timeseries, there is no need to check for land points or parallelise the workflow, hence from version 0.9.2 the code will check for the number of dimensions and when this is equal to one, it assumes it is the time dimension and skip all grid operations, including land_check."
    ]
   },
   {
@@ -3477,7 +3463,7 @@
     "````\n",
     "    def detect(temp, th, se, tdim='time', minDuration=5, joinGaps=True, \n",
     "               maxGap=2, maxPadLength=None, coldSpells=False,\n",
-    "               intermediate=False, anynans=False, point=False):\n",
+    "               intermediate=False, anynans=False):\n",
     "\n",
     "````\n",
     "Apart from the timeseries, the threshold and the seasonal average, the other arguments are all optional.<br>\n",
